Thu Jun  3 23:34:55 2010  Akinori MUSHA  <knu@iDaemons.org>

	* ext/digest/lib/digest/hmac.rb: Emit a deprecation warning in
	  verbose mode and add a caution to the overview section of the
	  document. [ruby-dev:41525]

Thu Jun  3 19:33:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/cfunc.c (rb_dlcfunc_inspect): suppress warnings by
	  rb_sprintf.

	* ext/dl/cptr.c (rb_dlptr_s_malloc): suppress warnings.

Thu Jun  3 18:58:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (ruby_init_ext): statically linked extensions have no
	  real path.  [ruby-dev:41526]

	* vm.c (rb_vm_call_cfunc): add filepath argument.

Thu Jun  3 18:17:45 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/rake/test_win32.rb (Rake::TestWin32): update tests.
	  [ruby-core:30309]

	* test/io/nonblock/test_flush.rb (test_flush): try pipe and
	  socketpair.  [ruby-dev:41517]

Thu Jun  3 09:39:54 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dl/dl.h (DLSTACK_TYPE): type of stack is same as VALUE.
	  reported by sakiyama shin in [ruby-dev:41514]

Thu Jun  3 06:25:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_path.rb (test_path): get rid of blocking on
	  access to non-existent host.

Tue Jun  1 23:22:59 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (unescape_nonascii): \P{FOO} is also Unicode property in
	  regexp. [ruby-core:30540]

Tue Jun  1 01:14:31 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c (pipe_open): add RB_GC_GUARD.
	  This caused failure when test/ruby/test_argf.rb is executed with
	  GC.stress = true in mswin32_90

Mon May 31 19:25:58 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* regparse.c (onig_syntax_warn): do not use external strings as
	  printf format.

Mon May 31 18:22:23 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* misc/ruby-mode.el (ruby-mode-set-encoding): skip shebang line
	  always regardless of ruby.

Mon May 31 04:03:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
